@@ -1,3 +1,6 @@
+2010-05-10
+* add a simple check for wpa_supplicant
+
 2010-05-09
 * add a script for creating a knowledgebase and fill it with some test data
 
